[design] scroll within issue and search bar smaller on mobile

--- a/webserver/mmwave/static/mmwave/mmwave.css
+++ b/webserver/mmwave/static/mmwave/mmwave.css
@@ -17,7 +17,7 @@
     padding-bottom: 10px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 991px) {
     .planner-map {
         position: fixed !important;
     }
