--- a/webserver/static/mmwave/src/sass/organisms/_profile-view.sass
+++ b/webserver/static/mmwave/src/sass/organisms/_profile-view.sass
@@ -46,7 +46,7 @@
         h5
             margin-bottom: 0
 body
-    @media screen and (max-width: 767px)
+    @media screen and (max-width: 991px)
         .fixed-bottom
             top: -16px
             position: relative
