--- a/webserver/static/mmwave/src/sass/pages/los-check.sass
+++ b/webserver/static/mmwave/src/sass/pages/los-check.sass
@@ -64,7 +64,20 @@ body
     .mapboxgl-popup-tip 
         border-top-color: $brand-dark-gray-color
 
-@media (min-width: 992px)
+@media (max-width: 640px)
+    .mapboxgl-ctrl-geocoder
+        &--input
+            height: 36px
+            padding: 6px 35px
+            font-size: 15px
+        &--icon
+            top: 8px
+        &--icon-search
+            left: 7px
+            width: 20px
+            height: 20px
+
+@media (min-width: 640px)
     .nodes-loading-message
         display: inline-block
     
